@@ -130,14 +130,6 @@ document ptn
 Print the name of the type-node that is $.
 end
 
-define pvt
-set debug_vec_tree ($)
-end
-
-document pvt
-Print the VEC(tree) that is in $.
-end
-
 define pdd
 set debug_dwarf_die ($)
 end
